fix formatting using ktlint format